--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "http-dev": "http-server ./www -p 8000"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/fire": "5.0.2",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular/animations": "^7.0.3",
+    "@angular/common": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/fire": "5.1.0",
+    "@angular/forms": "^7.0.3",
+    "@angular/http": "^7.0.3",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/router": "^7.0.3",
     "@firebase/app": "0.3.4",
     "@firebase/app-types": "0.3.2",
     "@ionic-native/core": "5.0.0-beta.9",
@@ -34,10 +34,9 @@
     "@ionic-native/social-sharing": "5.0.0-beta.9",
     "@ionic-native/splash-screen": "5.0.0-beta.9",
     "@ionic-native/status-bar": "5.0.0-beta.9",
-    "@ionic/angular": "4.0.0-beta.12",
-    "@ionic/core": "4.0.0-beta.12",
+    "@ionic/angular": "4.0.0-beta.16",
+    "@ionic/core": "4.0.0-beta.16",
     "@ionic/pro": "2.0.3",
-    "@ionic/schematics-angular": "1.0.6",
     "@ionic/storage": "2.1.3",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/entity": "^6.1.0",
@@ -74,14 +73,15 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.8.5",
-    "@angular-devkit/core": "0.8.5",
-    "@angular-devkit/schematics": "0.8.5",
-    "@angular/cli": "^6.2.5",
-    "@angular/compiler": "^6.1.10",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
-    "@ionic/ng-toolkit": "1.0.8",
+    "@angular-devkit/architect": "0.10.5",
+    "@angular-devkit/build-angular": "0.10.5",
+    "@angular-devkit/core": "0.7.5",
+    "@angular-devkit/schematics": "0.7.5",
+    "@angular/cli": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
+    "@angular/language-service": "^7.0.3",
+    "@ionic/angular-toolkit": "^1.2.0",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
     "@types/jest": "23.3.1",
@@ -102,7 +102,7 @@
     "protractor": "5.4.1",
     "ts-node": "^3.2.2",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
+    "typescript": "~3.1.6",
     "webdriver-manager": "12.1.0"
   },
   "description": "Ionic 4 Hacker News Client",
