--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/manifest.json",
               {
                 "glob": "**/*.svg",
-                "input": "node_modules/@ionic/angular/dist/ionic/svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
               },
               {
