--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "http-dev": "http-server ./www -p 8000"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.3",
-    "@angular/common": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/fire": "5.1.0",
-    "@angular/forms": "^7.0.3",
-    "@angular/http": "^7.0.3",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@angular/router": "^7.0.3",
-    "@firebase/app": "0.3.4",
-    "@firebase/app-types": "0.3.2",
-    "@ionic-native/core": "5.0.0-beta.9",
-    "@ionic-native/in-app-browser": "5.0.0-beta.9",
-    "@ionic-native/social-sharing": "5.0.0-beta.9",
-    "@ionic-native/splash-screen": "5.0.0-beta.9",
-    "@ionic-native/status-bar": "5.0.0-beta.9",
-    "@ionic/angular": "4.0.0-beta.16",
-    "@ionic/core": "4.0.0-beta.16",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.1.3",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "^6.1.0",
-    "@ngrx/store": "^6.1.0",
-    "@ngrx/store-devtools": "^6.1.0",
-    "cordova-android": "7.1.1",
+    "@angular/animations": "7.2.2",
+    "@angular/common": "7.2.2",
+    "@angular/core": "7.2.2",
+    "@angular/fire": "5.1.1",
+    "@angular/forms": "7.2.2",
+    "@angular/http": "7.2.2",
+    "@angular/platform-browser": "7.2.2",
+    "@angular/platform-browser-dynamic": "7.2.2",
+    "@angular/router": "7.2.2",
+    "@firebase/app": "0.3.8",
+    "@firebase/app-types": "0.3.3",
+    "@ionic-native/core": "5.0.0",
+    "@ionic-native/in-app-browser": "5.0.0",
+    "@ionic-native/social-sharing": "5.0.0",
+    "@ionic-native/splash-screen": "5.0.0",
+    "@ionic-native/status-bar": "5.0.0",
+    "@ionic/angular": "4.0.0",
+    "@ionic/core": "4.0.0",
+    "@ionic/pro": "2.0.4",
+    "@ionic/storage": "2.2.0",
+    "@ngrx/effects": "7.1.0",
+    "@ngrx/entity": "7.1.0",
+    "@ngrx/router-store": "7.1.0",
+    "@ngrx/store": "7.1.0",
+    "@ngrx/store-devtools": "7.1.0",
+    "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-browsertab": "0.2.0",
     "cordova-plugin-buildinfo": "2.0.2",
@@ -52,58 +52,58 @@
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-fcm": "git+https://github.com/alexcheng1982/cordova-plugin-fcm.git",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic": "5.2.5",
-    "cordova-plugin-ionic-keyboard": "2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.3",
+    "cordova-plugin-ionic": "5.2.10",
+    "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-ionic-webview": "^3.1.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-x-socialsharing": "5.4.1",
+    "cordova-plugin-x-socialsharing": "5.4.4",
     "cordova-universal-links-plugin": "git+https://github.com/walteram/cordova-universal-links-plugin.git",
     "es6-promise-plugin": "4.2.2",
-    "firebase": "5.5.4",
-    "gravatar": "1.6.0",
-    "ionicons": "4.3.0",
+    "firebase": "5.8.1",
+    "gravatar": "1.8.0",
+    "ionicons": "4.5.5",
     "lodash.concat": "4.5.0",
     "lodash.isequal": "4.5.0",
     "lodash.range": "3.2.0",
-    "moment": "2.22.2",
+    "moment": "2.24.0",
     "rxjs": "6.3.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.10.5",
-    "@angular-devkit/build-angular": "0.10.5",
-    "@angular-devkit/core": "0.7.5",
-    "@angular-devkit/schematics": "0.7.5",
-    "@angular/cli": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/language-service": "^7.0.3",
-    "@ionic/angular-toolkit": "^1.2.0",
-    "@types/jasmine": "2.8.8",
-    "@types/jasminewd2": "2.0.3",
-    "@types/jest": "23.3.1",
-    "@types/node": "10.7.0",
-    "codelyzer": "4.4.4",
-    "concurrently": "3.6.1",
+    "@angular-devkit/architect": "0.12.3",
+    "@angular-devkit/build-angular": "0.12.3",
+    "@angular-devkit/core": "7.2.3",
+    "@angular-devkit/schematics": "7.2.3",
+    "@angular/cli": "^7.2.3",
+    "@angular/compiler": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
+    "@ionic/angular-toolkit": "^1.3.0",
+    "@types/jasmine": "3.3.8",
+    "@types/jasminewd2": "2.0.6",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.19",
+    "codelyzer": "4.5.0",
+    "concurrently": "4.1.0",
     "http-server": "^0.11.1",
-    "jasmine": "3.2.0",
-    "jasmine-core": "3.2.1",
-    "jasmine-marbles": "0.3.1",
+    "jasmine": "3.3.1",
+    "jasmine-core": "3.3.0",
+    "jasmine-marbles": "0.4.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "3.0.0",
+    "karma": "4.0.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.3.1",
-    "protractor": "5.4.1",
-    "ts-node": "^3.2.2",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6",
-    "webdriver-manager": "12.1.0"
+    "karma-cli": "2.0.0",
+    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "protractor": "5.4.2",
+    "ts-node": "^8.0.2",
+    "tslint": "~5.12.1",
+    "typescript": "~3.2.4",
+    "webdriver-manager": "12.1.1"
   },
   "description": "Ionic 4 Hacker News Client",
   "cordova": {
